guestbook/guestbook-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  labels:
    app: guestbook-ui
  name: guestbook-ui
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: guestbook-ui
    weight: null
